feat(crypto): add Virtual Thread compatibility and @ThreadSafe annotations
- Add @ThreadSafe annotations to BDHKEUtils, DLEQUtils, Schnorr, KeysUtils
- Add jcip-annotations dependency for thread-safety documentation
- Create VirtualThreadConcurrencyTest with 100+ concurrent VT tests
- Add VT pinning detection to CI workflow
- Add virtual-thread-compatibility.md documentation
- Update README with VT compatibility section
- Configure surefire with -Djdk.tracePinnedThreads=short

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>